--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.9",
     "canvas-confetti": "^1.9.3",
     "leaflet": "^1.9.4",
+    "leaflet-geometryutil": "^0.10.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
